fix overflow for meta safety

--- a/public/css/deckgrid.css
+++ b/public/css/deckgrid.css
@@ -108,6 +108,7 @@
 .card-item .card-meta {
   padding: 12px 14px 13px;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  overflow: hidden;
 }
 
 .card-item .card-meta .title {
